--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ ul.two-column li {
 .skill {
   margin: 0.15em;
   padding: 0.15em;
-  background: ghostwhite;
+  background: antiquewhite;
   border-radius: 5px;
 }
 </style>
@@ -522,7 +522,6 @@ ul.two-column li {
                                     <h6 class="main-skill skill">Xel</h6>
                                     <h6 class="main-skill skill">BigFloat</h6>
                                     <h6 class="main-skill skill">React Native</h6>
-                                    <h6 class="main-skill skill">Gatsby</h6>
                                     <h6 class="main-skill skill">JSDoc</h6>
                                     <h6 class="main-skill skill">Open API</h6>
                                     <h6 class="main-skill skill">Mobx</h6>
@@ -536,15 +535,23 @@ ul.two-column li {
                             </div>                    <div class="minimal flex-container">
                                     <h6 class="main-skill skill">Git</h6>
                                     <h6 class="main-skill skill">VSCode</h6>
-                                    <h6 class="main-skill skill">Browser DevTools</h6>
-                                    <h6 class="main-skill skill">IDE Debuggers</h6>
+                                    <h6 class="main-skill skill">DevTools</h6>
+                                    <h6 class="main-skill skill">Debuggers</h6>
                                     <h6 class="main-skill skill">Nginx</h6>
                                     <h6 class="main-skill skill">Module Bundlers</h6>
-                                    <h6 class="main-skill skill">Babel</h6>
                                     <h6 class="main-skill skill">ESLint</h6>
                                     <h6 class="main-skill skill">Clang-format</h6>
                                     <h6 class="main-skill skill">Prettier</h6>
                                     <h6 class="main-skill skill">Unix</h6>
+                                    <h6 class="main-skill skill">Linux</h6>
+                                    <h6 class="main-skill skill">SSH</h6>
+                                    <h6 class="main-skill skill">Tmux</h6>
+                                    <h6 class="main-skill skill">AWS</h6>
+                                    <h6 class="main-skill skill">ZFS</h6>
+                                    <h6 class="main-skill skill">Solaris Zones</h6>
+                                    <h6 class="main-skill skill">Linux Containers</h6>
+                                    <h6 class="main-skill skill">Virtual Machines</h6>
+                                    <h6 class="main-skill skill">FFmpeg</h6>
                             </div>
                     </section>
             </div>
@@ -597,6 +604,7 @@ ul.two-column li {
                             <h6 class="skill">CouchDB</h6>
                             <h6 class="skill">Solid</h6>
                             <h6 class="skill">Xel</h6>
+                            <h6 class="skill">FFmpeg</h6>
                     </div>
         
                     <p class="summary">Working on a couple of commercial closed-source applications based on the NW.js runtime, the Solid reactive JavaScript UI library, and PouchDB.</p>
